# ros_course

./: .gitignore  Dockerfile  README.md  cpp.ipynb  set_ros_master.sh  start_docker.sh  start_jlab.sh
Instructions/: prepare.md
Instructions/.ipynb_checkpoints/: prepare-checkpoint.md
Other/: build_docker.sh  connect_docker.sh
Other/my_own_ros_ws/src/haha_package/: CMakeLists.txt  package.xml  yahoo.launch
Other/my_own_ros_ws/src/haha_package/msg/: Haha.msg
Other/my_own_ros_ws/src/haha_package/src/: listener.cpp  talker.cpp
Topics/: 0_01_Setup.md  0_02_Packages_Catkin.md  0_03_Nodes_Topics_101.md  0_04_Names_Mapping.md  0_04_PyPub.md  0_05_PySub.md  0_05_Roslaunch.md  0_06_CppPubSub.md  0_06_PyPub.md  0_07_Names_Mapping.md  0_07_PySub.md  0_08_CppPubSub.md  0_08_Roslaunch.md  0_09_MsgCreation.md  0_10_Services.md  0_11_Params.md  0_Jupyter.ipynb  10_Services.ipynb  10_Services.md  11_Params.md  12_0_TF.md  13_1_TF_broadcaster.md  1_01_TF.md  1_02_TF_broadcaster.md  1_03_TF_listener.md  1_04_Gazebo_101.md  1_05_Gazebo_Turtle_Map.md  1_06_Gazebo_Turtle_Deeper.md  1_07_Gazebo_Localization.md  1_07_Gazebo_Navigation.md  1_08_Actionlib.md  1_08_Gazebo_MoveBase.md  1_09_Gazebo_MoveBase.md  1_09_URDF_robot.md  1_Packages_Catkin.md  1_Setup.md  2_Nodes_Topics_101.ipynb  2_Nodes_Topics_Basics.ipynb  2_Packages_Catkin.md  3_Nodes_Topics_101.ipynb  (+15 more)
bk/: 10_Services.ipynb  11_Params.ipynb  1_04_Image_CV.md  3_Nodes_Topics_101.ipynb
catkin_ws/: Makefile
my_own_ros_ws/: ros_ws.pro  set_ip.sh
vm_tools/: install_pkgs.sh  mount_host.sh  proxy_leti.sh  proxy_off.sh
(+88 files in other folders)
